fix horizontal scroll on mobile

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -80,6 +80,7 @@ body {
 }
 
 .site-header {
+  overflow: hidden; // fixes overscroll on mobile
   display: flex;
   align-items: center;
   justify-content: space-between;
